<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/newCallFragment">

    <fragment
        android:id="@+id/newCallFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.calls.newcall.NewCallFragment"
        android:label="@string/new_call"
        tools:layout="@layout/fragment_new_call">
        <action
            android:id="@+id/action_newCallFragment_to_outgoingCallFragment"
            app:destination="@id/outgoingCallFragment" />

        <argument
            android:name="initialCallItem"
            android:defaultValue="@null"
            app:argType="com.sinch.rtc.vvc.reference.app.domain.calls.CallItem"
            app:nullable="true" />

    </fragment>

    <fragment
        android:id="@+id/incomingCallFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.calls.incoming.IncomingCallFragment"
        android:label="@string/incoming_call_label"
        tools:layout="@layout/fragment_incoming_call">
        <action
            android:id="@+id/action_incomingCallFragment_to_establishedCallFragment"
            app:destination="@id/establishedCallFragment" />
    </fragment>

    <fragment
        android:id="@+id/outgoingCallFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.calls.outgoing.OutgoingCallFragment"
        android:label="@string/outgoing_call_label"
        tools:layout="@layout/fragment_outgoing_call">

        <action
            android:id="@+id/action_outgoingCallFragment_to_establishedCallFragment"
            app:destination="@id/establishedCallFragment"
            app:popUpTo="@id/outgoingCallFragment"
            app:popUpToInclusive="true" />

        <argument
            android:name="callItemData"
            app:argType="com.sinch.rtc.vvc.reference.app.domain.calls.CallItem"
            app:nullable="false" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.settings.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_loginActivity"
            app:destination="@id/loginActivity" />
    </fragment>

    <fragment
        android:id="@+id/establishedCallFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.calls.established.EstablishedCallFragment"
        android:label="@string/established_call_label"
        tools:layout="@layout/fragment_established_call">

        <argument
            android:name="callItemData"
            app:argType="com.sinch.rtc.vvc.reference.app.domain.calls.CallItem"
            app:nullable="false" />

        <argument
            android:name="sinchCallId"
            app:argType="string"
            app:nullable="false" />

    </fragment>

    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.contacts.ContactsFragment"
        android:label="@string/contacts_label"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/callHistoryFragment"
        android:name="com.sinch.rtc.vvc.reference.app.features.calls.history.CallHistoryFragment"
        android:label="@string/history_label"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_callHistoryFragment_to_outgoingCallFragment"
            app:destination="@id/outgoingCallFragment" />
        <action
            android:id="@+id/action_callHistoryFragment_to_newCallFragment"
            app:destination="@id/newCallFragment"
            app:popUpTo="@id/newCallFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <action
        android:id="@+id/to_logged_out_flow"
        app:destination="@id/loginActivity" />

    <activity
        android:id="@+id/loginActivity"
        android:name="com.sinch.rtc.vvc.reference.app.navigation.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />

</navigation>