<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".navigation.LoggedInActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabChooseRecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_call" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_label" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.1"
            android:clickable="false"
            android:text="@string/contacts_label" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/loggedInNavigationHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:navGraph="@navigation/logged_in_nav_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>